--- a/ProjectManagementSystem/ProjectManagementSystem.csproj
+++ b/ProjectManagementSystem/ProjectManagementSystem.csproj
@@ -6,4 +6,18 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Views\Projects\" />
+      <Folder Include="Views\Tasks\" />
+      <Folder Include="Views\Users\" />
+    </ItemGroup>
+
 </Project>
